--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+body{
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-bg: #fffaf5;
+  --color-text: #1f1f1f;
+  --color-subtext: #5c5c5c;
+
+  --color-accent: #e2bfb3; 
+  --color-accent-dark: #d19a8d; 
+  
+  --color-heading: #1a1a1a;
+  --color-card-bg: #ffffff;
+  --color-border: #e0e0e0;
+
+  --color-sale-bg: #fef1ef;
+  --color-sale-text: #c15b5b;
+
+  --color-button-bg: #d89b95;
+  --color-button-hover: #b87f79;
+  --color-button-text: #ffffff;
+
+  --color-navbar-bg: #ffffff;
+  --color-navbar-text: #111827;
 }
